# dcat-us3-tools

./: CONVERSION_README.md  DCAT-US3_Schema_Differences_Analysis.md  LICENSE.md  README.md  combine_schema_manual.py  convert_dcat_us.py  pyproject.toml  schema_comparison_table.md
dcat-us1.1/: catalog.json  dataset.json  validate_examples.py
dcat-us1.1/examples/: dcatus_2.json
dcat-us3/: dataset.json  dcat-us-3.0-context.jsonld  dcat-us3.0-expanded-schema.json  dcat-us_3.0_shacl_shapes.ttl  validate_examples.py  validate_jsonschema.py
dcat-us3/examples/: dcat-us3-example.jsonld  dcatus-modified.json  dcatus-v3.jsonld  dcatus_2-v3.jsonld
dcat-us3/examples/bad/: website_example.jsonld
dcat-us3/examples/good/: dcat-us3-dataset-only.jsonld  dcat-us3-dataset-real.jsonld  dcat-us3-example-expanded.jsonld  dcatus-modified.json
dcat-us3/jsonschema/: README.md  combine_schema_manual.py  dcat-us3.0-expanded-schema.json  dcat_us_3.0.0_schema.json
dcat-us3/jsonschema/definitions/: AccessRestriction.json  Activity.json  Address.json  Agent.json  Attribution.json  CUIRestriction.json  Catalog.json  CatalogRecord.json  Checksum.json  Concept.json  ConceptScheme.json  DataService.json  Dataset.json  DatasetSeries.json  Distribution.json  Document.json  GeographicBoundingBox.json  Identifier.json  Kind.json  LiabilityStatement.json  LicenseDocument.json  Location.json  MediaType.json  Metric.json  Organization.json  PeriodOfTime.json  Person.json  ProvenanceStatement.json  QualityMeasurement.json  Relationship.json  RightsStatement.json  Standard.json  UseRestriction.json
